build: enable Java 17 preview features, in particular switch matching